--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -279,33 +279,37 @@ m4trace:configure.ac:45: -1- AC_SUBST([SHLIB_DL_SUFFIX_NAME])
 m4trace:configure.ac:45: -1- AC_SUBST_TRACE([SHLIB_DL_SUFFIX_NAME])
 m4trace:configure.ac:45: -1- m4_pattern_allow([^SHLIB_DL_SUFFIX_NAME$])
 m4trace:configure.ac:133: -1- sinclude([config.m4])
-m4trace:config.m4:22: -1- AC_SUBST([SDL3_CFLAGS])
-m4trace:config.m4:22: -1- AC_SUBST_TRACE([SDL3_CFLAGS])
-m4trace:config.m4:22: -1- m4_pattern_allow([^SDL3_CFLAGS$])
-m4trace:config.m4:22: -1- AC_SUBST([SDL3_LIBS])
-m4trace:config.m4:22: -1- AC_SUBST_TRACE([SDL3_LIBS])
-m4trace:config.m4:22: -1- m4_pattern_allow([^SDL3_LIBS$])
-m4trace:config.m4:44: -1- AC_SUBST([SDL3_GFX_CFLAGS])
-m4trace:config.m4:44: -1- AC_SUBST_TRACE([SDL3_GFX_CFLAGS])
-m4trace:config.m4:44: -1- m4_pattern_allow([^SDL3_GFX_CFLAGS$])
-m4trace:config.m4:44: -1- AC_SUBST([SDL3_GFX_LIBS])
-m4trace:config.m4:44: -1- AC_SUBST_TRACE([SDL3_GFX_LIBS])
-m4trace:config.m4:44: -1- m4_pattern_allow([^SDL3_GFX_LIBS$])
-m4trace:config.m4:67: -1- AC_SUBST([SDL3_IMAGE_CFLAGS])
-m4trace:config.m4:67: -1- AC_SUBST_TRACE([SDL3_IMAGE_CFLAGS])
-m4trace:config.m4:67: -1- m4_pattern_allow([^SDL3_IMAGE_CFLAGS$])
-m4trace:config.m4:67: -1- AC_SUBST([SDL3_IMAGE_LIBS])
-m4trace:config.m4:67: -1- AC_SUBST_TRACE([SDL3_IMAGE_LIBS])
-m4trace:config.m4:67: -1- m4_pattern_allow([^SDL3_IMAGE_LIBS$])
-m4trace:config.m4:90: -1- AC_SUBST([SDL3_TTF_CFLAGS])
-m4trace:config.m4:90: -1- AC_SUBST_TRACE([SDL3_TTF_CFLAGS])
-m4trace:config.m4:90: -1- m4_pattern_allow([^SDL3_TTF_CFLAGS$])
-m4trace:config.m4:90: -1- AC_SUBST([SDL3_TTF_LIBS])
-m4trace:config.m4:90: -1- AC_SUBST_TRACE([SDL3_TTF_LIBS])
-m4trace:config.m4:90: -1- m4_pattern_allow([^SDL3_TTF_LIBS$])
-m4trace:config.m4:110: -1- AC_DEFINE_TRACE_LITERAL([COMPILE_DL_SDL3])
-m4trace:config.m4:110: -1- m4_pattern_allow([^COMPILE_DL_SDL3$])
-m4trace:config.m4:110: -1- AH_OUTPUT([COMPILE_DL_SDL3], [/* Define to 1 if the PHP extension \'sdl3\' is built as a dynamic module. */
+m4trace:config.m4:18: -1- AC_SUBST([SDL3_CFLAGS])
+m4trace:config.m4:18: -1- AC_SUBST_TRACE([SDL3_CFLAGS])
+m4trace:config.m4:18: -1- m4_pattern_allow([^SDL3_CFLAGS$])
+m4trace:config.m4:18: -1- AC_SUBST([SDL3_LIBS])
+m4trace:config.m4:18: -1- AC_SUBST_TRACE([SDL3_LIBS])
+m4trace:config.m4:18: -1- m4_pattern_allow([^SDL3_LIBS$])
+m4trace:config.m4:40: -1- AC_SUBST([SDL3_IMAGE_CFLAGS])
+m4trace:config.m4:40: -1- AC_SUBST_TRACE([SDL3_IMAGE_CFLAGS])
+m4trace:config.m4:40: -1- m4_pattern_allow([^SDL3_IMAGE_CFLAGS$])
+m4trace:config.m4:40: -1- AC_SUBST([SDL3_IMAGE_LIBS])
+m4trace:config.m4:40: -1- AC_SUBST_TRACE([SDL3_IMAGE_LIBS])
+m4trace:config.m4:40: -1- m4_pattern_allow([^SDL3_IMAGE_LIBS$])
+m4trace:config.m4:63: -1- AC_SUBST([SDL3_TTF_CFLAGS])
+m4trace:config.m4:63: -1- AC_SUBST_TRACE([SDL3_TTF_CFLAGS])
+m4trace:config.m4:63: -1- m4_pattern_allow([^SDL3_TTF_CFLAGS$])
+m4trace:config.m4:63: -1- AC_SUBST([SDL3_TTF_LIBS])
+m4trace:config.m4:63: -1- AC_SUBST_TRACE([SDL3_TTF_LIBS])
+m4trace:config.m4:63: -1- m4_pattern_allow([^SDL3_TTF_LIBS$])
+m4trace:config.m4:82: -1- AC_SUBST([LIBNOTIFY_CFLAGS])
+m4trace:config.m4:82: -1- AC_SUBST_TRACE([LIBNOTIFY_CFLAGS])
+m4trace:config.m4:82: -1- m4_pattern_allow([^LIBNOTIFY_CFLAGS$])
+m4trace:config.m4:82: -1- AC_SUBST([LIBNOTIFY_LIBS])
+m4trace:config.m4:82: -1- AC_SUBST_TRACE([LIBNOTIFY_LIBS])
+m4trace:config.m4:82: -1- m4_pattern_allow([^LIBNOTIFY_LIBS$])
+m4trace:config.m4:82: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBNOTIFY])
+m4trace:config.m4:82: -1- m4_pattern_allow([^HAVE_LIBNOTIFY$])
+m4trace:config.m4:82: -1- AH_OUTPUT([HAVE_LIBNOTIFY], [/* Enable libnotify for desktop_notify() */
+@%:@undef HAVE_LIBNOTIFY])
+m4trace:config.m4:92: -1- AC_DEFINE_TRACE_LITERAL([COMPILE_DL_SDL3])
+m4trace:config.m4:92: -1- m4_pattern_allow([^COMPILE_DL_SDL3$])
+m4trace:config.m4:92: -1- AH_OUTPUT([COMPILE_DL_SDL3], [/* Define to 1 if the PHP extension \'sdl3\' is built as a dynamic module. */
 @%:@undef COMPILE_DL_SDL3])
 m4trace:configure.ac:150: -1- AC_PROG_LIBTOOL
 m4trace:configure.ac:150: -1- AC_SUBST([LN_S], [$as_ln_s])
